@startuml
title Biểu đồ lớp tổng - Các chức năng cốt lõi MindHealth

class User {
  +id: UUID
  +email: String
  +passwordHash: String
  +role: Role
  +isActive: Boolean
}

class PatientProfile {
  +id: UUID
  +nickname: String
  +avatarIcon: String
  +anonymousModeEnabled: Boolean
  +realFullName: String
  +phoneNumber: String
  +emergencyContactPhone: String
  +lsasDemoCompleted: Boolean
  +safetyGateCompleted: Boolean
  +medicalProfileCompleted: Boolean
}

class LsasSubmission {
  +id: UUID
  +totalScore: Integer
  +severityBand: String
  +severityLabel: String
  +clinicalRoute: String
  +redFlagTriggered: Boolean
  +submittedAt: DateTime
}

class RoadmapProgramState {
  +id: UUID
  +programWeek: Integer
  +programPhaseCode: String
  +programPhaseLabel: String
  +therapyProgramStartedAt: DateTime
  +weekStartDate: Date
  +weekEndDate: Date
}

class RoadmapProgramModule {
  +id: UUID
  +moduleCode: String
  +title: String
  +programWeek: Integer
  +programPhaseCode: String
  +unlockType: String
  +expectedUnlockAt: DateTime
  +locked: Boolean
}

class FearLadderItem {
  +id: UUID
  +ladderOrder: Integer
  +situationText: String
  +difficulty: String
  +status: String
  +unlocked: Boolean
}

class BehavioralExperiment {
  +id: UUID
  +prediction: String
  +predictionBeliefBefore: Integer
  +predictionBeliefAfter: Integer
  +safetyBehaviorsJson: String
  +outcome: String
  +learning: String
  +status: String
  +startedAt: DateTime
  +completedAt: DateTime
}

class MoodCheckin {
  +id: UUID
  +anxietyScore: Integer
  +sadnessScore: Integer
  +avoidanceUrgeScore: Integer
  +anticipatoryAnxietyScore: Integer
  +ruminationScore: Integer
  +moodLabel: String
  +createdAt: DateTime
}

class RedFlagLog {
  +id: UUID
  +reason: String
  +active: Boolean
  +triggeredAt: DateTime
}

class TherapistProfile {
  +id: UUID
  +fullName: String
  +specialization: String
  +bio: String
  +approvalStatus: String
}

enum Role {
  GUEST
  PATIENT
  THERAPIST
  ADMIN
}

User "1" -- "0..1" PatientProfile
PatientProfile "1" -- "0..*" LsasSubmission
PatientProfile "1" -- "0..1" RoadmapProgramState
RoadmapProgramState "1" -- "0..*" RoadmapProgramModule
PatientProfile "1" -- "0..*" FearLadderItem
FearLadderItem "1" -- "0..*" BehavioralExperiment
PatientProfile "1" -- "0..*" MoodCheckin
PatientProfile "1" -- "0..*" RedFlagLog
TherapistProfile "1" -- "0..*" PatientProfile

@enduml
